--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <title>Page d'accueil</title>
+    </head>
     <body>
         <h1>Bienvenue>/h1>
         <p>Bienvenue sur ma page HTML !</p>
+        
     </body>
 </html>
