--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html>
     <head>
         <title>Page d'accueil</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1>Bienvenue>/h1>
+       <h1>Bienvenue</h1>
         <p>Bienvenue sur ma page HTML !</p>
         
+        <ul>
+            <li>Maquillage</li>
+            <li>Cuisiner</li>
+            <li>Cinéma</li>
+        </ul>
+        </div>
+       
     </body>
 </html>
