--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <body>
        <h1>Bienvenue</h1>
         <p>Bienvenue sur ma page HTML !</p>
-        
+    <div>
+        <h2>Découvrez trois de mes intérêts personnels !</h2>
         <ul>
             <li>Maquillage</li>
             <li>Cuisiner</li>
