--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
         <h2>Découvrez trois de mes intérêts personnels !</h2>
         <ul>
             <li>Maquillage</li>
+            <p>J'adore regarder des tutoriels sur Youtube et tester de nouveaux produits !</p>
             <li>Cuisiner</li>
+            <p>Cuisiner, surtout des desserts me relaxe vraiment beaucoup ! C'est une thérapie à tester. </p>
             <li>Cinéma</li>
+            <p>Mon genre préféré ? Le drame. J'aime bien passer mes soirées en compagnie de mes proches et en regardant un bon film.</p>
         </ul>
         </div>
        
