--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Page d'accueil</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
        <h1>Bienvenue</h1>
@@ -13,7 +13,7 @@
             <li>Maquillage</li>
             <p>J'adore regarder des tutoriels sur Youtube et tester de nouveaux produits !</p>
             <li>Cuisiner</li>
-            <p>Cuisiner, surtout des desserts me relaxe vraiment beaucoup ! C'est une thérapie à tester. </p>
+            <p>Cuisiner, surtout des desserts, me relaxe vraiment beaucoup ! C'est une thérapie à tester. </p>
             <li>Cinéma</li>
             <p>Mon genre préféré ? Le drame. J'aime bien passer mes soirées en compagnie de mes proches et en regardant un bon film.</p>
         </ul>
