--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <ul>
             <li>Maquillage</li>
             <p>J'adore regarder des tutoriels sur Youtube et tester de nouveaux produits !</p>
-            <img src="https://cdn.pixabay.com/photo/2017/11/29/09/15/paint-2985569_1280.jpg" width="30%">
+            <p><img src="https://cdn.pixabay.com/photo/2017/11/29/09/15/paint-2985569_1280.jpg" width="30%"></p>
             <li>Cuisiner</li>
             <p>Cuisiner, surtout des desserts, me relaxe vraiment beaucoup ! C'est une thérapie à tester. </p>
-            <img src="https://cdn.pixabay.com/photo/2015/03/26/09/39/cupcakes-690040_1280.jpg" width="30%">
+            <p><img src="https://cdn.pixabay.com/photo/2015/03/26/09/39/cupcakes-690040_1280.jpg" width="30%"></p>
             <li>Cinéma</li>
             <p>Mon genre préféré ? Le drame. J'aime bien passer mes soirées en compagnie de mes proches et en regardant un bon film.</p>
-            <img src="https://cdn.pixabay.com/photo/2017/11/24/10/43/admission-2974645_1280.jpg" width="30%">
+            <p><img src="https://cdn.pixabay.com/photo/2017/11/24/10/43/admission-2974645_1280.jpg" width="30%"></p>
         </ul>
         </div>
        
